--- a/todo.css
+++ b/todo.css
@@ -30,7 +30,7 @@ body {
 }
 
 ul {
-    list-style-image: url('file:///nfs/2018/a/aliwang/Desktop/icon_grid_1x_240ded28-7646-4a95-85a3-83327910899e.png');
+    list-style-image: url('https://i.imgur.com/F3utrLW.png');
 }
 
 li {
